--- a/Video_IMU_Recorder/app/src/main/res/layout/activity_main.xml
+++ b/Video_IMU_Recorder/app/src/main/res/layout/activity_main.xml
@@ -17,4 +17,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/record_hint"
+        app:layout_constraintTop_toBottomOf="@id/record_start"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
