Displayed recording session count in UI, optimized sensor logic

--- a/Video_IMU_Recorder/app/src/main/res/layout/activity_main.xml
+++ b/Video_IMU_Recorder/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,25 @@
     android:orientation="horizontal"
     tools:context=".MainActivity">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/record_counter"
+        app:layout_constraintBottom_toTopOf="@id/record_start"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/overwrite_notice"
+        android:padding="15dp"
+        app:layout_constraintBottom_toTopOf="@id/record_start"
+        app:layout_constraintTop_toBottomOf="@id/record_counter"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
     <androidx.appcompat.widget.AppCompatButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
