--- a/Video_IMU_Recorder/app/src/main/res/layout/activity_main.xml
+++ b/Video_IMU_Recorder/app/src/main/res/layout/activity_main.xml
@@ -10,8 +10,9 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/record_counter"
-        app:layout_constraintBottom_toTopOf="@id/record_start"
+        android:text="@string/overwrite_notice"
+        android:padding="15dp"
+        app:layout_constraintBottom_toTopOf="@id/record_counter"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -19,11 +20,30 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/overwrite_notice"
-        android:padding="15dp"
-        app:layout_constraintBottom_toTopOf="@id/record_start"
-        app:layout_constraintTop_toBottomOf="@id/record_counter"
+        android:id="@+id/record_counter"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/record_mode"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/mode_prompt"
+        android:text="@string/mode_toggle"
+        app:layout_constraintTop_toBottomOf="@id/record_counter"
+        app:layout_constraintBottom_toTopOf="@id/record_start"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/record_mode" />
+
+    <androidx.appcompat.widget.SwitchCompat
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/record_mode"
+        android:checked="true"
+        app:layout_constraintTop_toBottomOf="@id/record_counter"
+        app:layout_constraintBottom_toTopOf="@id/record_start"
+        app:layout_constraintStart_toEndOf="@id/mode_prompt"
         app:layout_constraintEnd_toEndOf="parent" />
 
     <androidx.appcompat.widget.AppCompatButton
@@ -40,6 +60,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/record_hint"
+        android:padding="15dp"
         app:layout_constraintTop_toBottomOf="@id/record_start"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
