--- a/Video_IMU_Recorder/app/src/main/res/layout/activity_main.xml
+++ b/Video_IMU_Recorder/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
-    tools:context=".MainActivity">
+    tools:context="com.nyu.video_imu_recorder.MainActivity">
 
     <TextView
         android:layout_width="wrap_content"
