Superclassed IMU actions; Switched to com.nyu namespace

--- a/Video_IMU_Recorder/app/src/main/res/layout/activity_burst_image.xml
+++ b/Video_IMU_Recorder/app/src/main/res/layout/activity_burst_image.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".BurstImage">
+    tools:context="com.nyu.video_imu_recorder.BurstImage">
 
     <SurfaceView
         android:layout_width="match_parent"
